2012-10-16  6.8.0-1 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.0-1, SVN revision 9632.

2012-10-12  6.8.0-1 Cristy  <quetzlzacatenango@image...>
  * Fix color management for the -solarize option (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22059).
  * Some colormap unit tests failed for a quantum depth of 32 (problem
    report from Glenn Randers-Pehrson).

2012-10-12  6.8.0-0 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.0-0, SVN revision 9594.

2012-10-07  6.8.0-0 Cristy  <quetzlzacatenango@image...>
  * Check -fx expression early to prevent fault.
  * Performance boast for iOS / Android requires a SO major version increment.
  * Corrupt PNG image could cause a memory leak (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22024).

2012-10-06  6.7.9-10 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.9-10, SVN revision 9514.

2012-10-01  6.7.9-10 Cristy  <quetzlzacatenango@image...>
  * SVG specs says "1pt" equals "1.25px" (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21967).
  * Support TIFF proprietary tag 34118.
  * The define option is no longer "lazy" interpretation (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22007).

2012-10-01  6.7.9-9 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.9-9, SVN revision 9473.

2012-09-27  6.7.9-9 Cristy  <quetzlzacatenango@image...>
  * Fix memory leak in JPEG decoder when reading a corrupt image (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21948).
  * Add exif:thumbnail namespace to distiguish orientation tag (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21938).
  * Respect DPX data offsets (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21960).

2012-09-26  6.7.9-8 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.9-8, SVN revision 9437.
