@@ -1016,9 +1016,10 @@ static const OptionInfo
     { "Kaiser", KaiserFilter, UndefinedOptionFlag, MagickFalse },
     { "Lagrange", LagrangeFilter, UndefinedOptionFlag, MagickFalse },
     { "Lanczos", LanczosFilter, UndefinedOptionFlag, MagickFalse },
-    { "LanczosSharp", LanczosSharpFilter, UndefinedOptionFlag, MagickFalse },
     { "Lanczos2", Lanczos2Filter, UndefinedOptionFlag, MagickFalse },
     { "Lanczos2Sharp", Lanczos2SharpFilter, UndefinedOptionFlag, MagickFalse },
+    { "LanczosRadius", LanczosRadiusFilter, UndefinedOptionFlag, MagickFalse },
+    { "LanczosSharp", LanczosSharpFilter, UndefinedOptionFlag, MagickFalse },
     { "Mitchell", MitchellFilter, UndefinedOptionFlag, MagickFalse },
     { "Parzen", ParzenFilter, UndefinedOptionFlag, MagickFalse },
     { "Point", PointFilter, UndefinedOptionFlag, MagickFalse },
